--- a/microservicio-administrador/src/main/resources/application.properties
+++ b/microservicio-administrador/src/main/resources/application.properties
@@ -9,6 +9,8 @@ spring.jpa.show-sql=true
 spring.jpa.database=mysql
 spring.sql.init.mode=always
 spring.jpa.hibernate.ddl-auto=update
+spring.main.allow-bean-definition-overriding=true
+
 
 #Variable de entorno
 server.port=8003
